--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
           </div>
           <div class="col-lg-7">
             <div class="images">
-              <img class="img1 img-fluid" src="assets/images/600x450_img_2.jpg" alt="free Template by ProBootstrap.com">
-              <img class="img2" src="assets/images/800x500_img_1.jpg" alt="free Template by ProBootstrap.com">
+              <img class="img1 img-fluid" src="assets/images/sebastien-gabriel-232361.jpg" alt="free Template by ProBootstrap.com">
             </div>
           </div>
 
@@ -300,9 +299,9 @@
             <div class="single-item pb_slide_v2">
               <div>
                 <div class="d-lg-flex d-md-block slide_content">
-                  <div class="pb_content-media" style="background-image: url(assets/images/1900x1200_img_4.jpg);"></div>
-                  <div class="slide_content-text text-center">
-                    <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-handcuffs"></i></div>
+
+                  <div class="slide_content-text text-center"  style="display: block;margin: 0 auto;">
+
                     <h3 class="font-weight-normal mt-0 mb-4">General Marketing</h3>
                     <p>Do you recognize which part of an ICO causes the most headaches? A usual ICO has numerous constituents to be taken care of where marketing is concerned. We take care of all that headache, in a snap. Here’s the list of a massive undertaking that we offer under Marketing:</p>
                     <p><ul><li>Facebook Page</li>
@@ -318,9 +317,7 @@
 
               <div>
                 <div class="d-lg-flex d-md-block slide_content">
-                  <div class="pb_content-media" style="background-image: url(assets/images/1900x1200_img_2.jpg);"></div>
-                  <div class="slide_content-text text-center">
-                    <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-wallet"></i></div>
+                  <div class="slide_content-text text-center"  style="display: block;margin: 0 auto;">
                     <h3 class="font-weight-normal mt-0 mb-4">Specialized Marketing</h3>
                     <p>Here’s what we cover when a specialized set of marketing activities are concerned:</p>
 
@@ -336,9 +333,7 @@
 
               <div>
                 <div class="d-lg-flex d-md-block slide_content">
-                  <div class="pb_content-media" style="background-image: url(assets/images/1900x1200_img_3.jpg);"></div>
-                  <div class="slide_content-text text-center">
-                    <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-computer-security"></i></div>
+                  <div class="slide_content-text text-center"  style="display: block;margin: 0 auto;">
                     <h3 class="font-weight-normal mt-0 mb-4">Top-Tier and Mid-Tier PR</h3>
                     <p>Even though ICOs are very much of the present times, there still are traditional investors who are very keen on investing in the ICOs, and they actually many a times form a rather larger part of your investor pool. These traditional investors know the language of big news houses speaking about you. We can help you get this handled for your ICO.
 </p>
@@ -348,9 +343,7 @@
 
               <div>
                 <div class="d-lg-flex d-md-block slide_content">
-                  <div class="pb_content-media" style="background-image: url(assets/images/1900x1200_img_4.jpg);"></div>
-                  <div class="slide_content-text text-center">
-                    <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-courthouse"></i></div>
+                  <div class="slide_content-text text-center" style="display: block;margin: 0 auto;">
                     <h3 class="font-weight-normal mt-0 mb-4">Investments</h3>
                     <p>Allow us to dive in and help you acquire a set of top-tier and very specific investors. This is the part which helps the most during a private/public Pre-Sale. This is the stage where big sharks may join in and give the significant boost your project requires.</p>
                   </div>
@@ -389,7 +382,7 @@
         <div class="row">
           <div class="col-md">
             <div class="card text-center pb_card_v1 mb-4">
-              <img class="card-img-top rounded-circle w-50 mx-auto" src="assets/images/square_img_5.jpg" alt="Card image cap">
+              <img class="card-img-top w-50 mx-auto" src="assets/images/NewsBTC_logo.jpg" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title mt-0 mb-2">NewsBTC</h4>
                 <h6 class="card-subtitle mb-2">The leading Blockchain and ICO Media House</h6>
@@ -399,7 +392,7 @@
           </div>
           <div class="col-md">
             <div class="card text-center pb_card_v1 mb-4">
-              <img class="card-img-top rounded-circle w-50 mx-auto" src="assets/images/square_img_5.jpg" alt="Card image cap">
+              <img class="card-img-top w-50 mx-auto" src="assets/images/KC-Logo.jpg" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title mt-0 mb-2">KickICO</h4>
                 <h6 class="card-subtitle mb-2">Blockchain Crowdfunding Website for ICOs</h6>
@@ -409,7 +402,7 @@
           </div>
           <div class="col-md">
             <div class="card text-center pb_card_v1 mb-4">
-              <img class="card-img-top rounded-circle w-50 mx-auto" src="assets/images/square_img_5.jpg" alt="Card image cap">
+              <img class="card-img-top w-50 mx-auto" src="assets/images/icorating-logo.png" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title mt-0 mb-2">ICORating</h4>
                 <h6 class="card-subtitle mb-2">A top Rating and Analysis Portal for ICOs</h6>
