--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 
         <div class="row">
           <div class="col-md-8 pr-md-5 pr-sm-0 mb-4">
-            <form action="#">
+            <form action="javascript://" onsubmit="">
               <div class="row">
                 <div class="col-md">
                   <div class="form-group">
