--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 
         <div class="row">
           <div class="col-md-8 pr-md-5 pr-sm-0 mb-4">
-            <form action="javascript://" onsubmit="supportForm()">
+            <form action="javascript://">
               <div class="row">
                 <div class="col-md">
                   <div class="form-group">
@@ -562,7 +562,7 @@
                 <textarea cols="30" rows="10" class="form-control p-3 rounded-0" id="message"></textarea>
               </div>
               <div class="form-group">
-                <input type="submit" class="btn pb_outline-dark pb_font-13 pb_letter-spacing-2 p-3 rounded-0" value="Send Message">
+                <input type="submit" class="btn pb_outline-dark pb_font-13 pb_letter-spacing-2 p-3 rounded-0" value="Send Message" onclick="supportForm()">
               </div>
             </form>
           </div>
