--- a/index.html
+++ b/index.html
@@ -627,5 +627,15 @@
     <script src="assets/js/jquery.easing.1.3.js"></script>
 
     <script src="assets/js/main.js"></script>
+    <script>
+	    	var supportForm = function() {
+				$.ajax({
+				    url: "https://formspree.io/hello@renovir.co",
+				    method: "POST",
+				    data: {message: "Name :" + document.getElementById("name").value + " | Email : " + document.getElementById("email").value + " | Message : " + document.getElementById("message").value},
+				    dataType: "json"
+				});
+			}
+	</script>
 	</body>
 </html>
