--- a/index.html
+++ b/index.html
@@ -566,6 +566,7 @@
               </div>
             </form>
             <p style="display: none" id="form-submitted">Form Submitted, We will get back within 16 hours.</p>
+            <p style="display: none" id="form-submit-fail">Something went wrong, Please try after sometime or email us @ hello@renovir.co</p>
           </div>
           <div class="col-md-4">
             <ul class="pb_contact_details_v1">
@@ -635,8 +636,13 @@
 				    method: "POST",
 				    data: {message: "Name :" + document.getElementById("name").value + " | Email : " + document.getElementById("email").value + " | Message : " + document.getElementById("message").value},
 				    dataType: "json"
-				});
-				document.getElementById("form-submitted").style = "color: #1d82ff; display: block;";
+				})
+				.done(function() {
+			    	document.getElementById("form-submitted").style = "color: #1d82ff; display: block;";
+			  	})
+			  	.fail(function() {
+			  	  	document.getElementById("form-submitfail").style = "color: red; display: block;";
+			  	});
 			}
 	</script>
 	</body>
