--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
               </div>
             </form>
             <p style="display: none" id="form-submitted">Form Submitted, We will get back within 16 hours.</p>
-            <p style="display: none" id="form-submit-fail">Something went wrong, Please try after sometime or email us @ hello@renovir.co</p>
+            <p style="display: none" id="form-submit-fail">Something went wrong, Please try after sometime or email us at hello@renovir.co</p>
           </div>
           <div class="col-md-4">
             <ul class="pb_contact_details_v1">
@@ -641,7 +641,7 @@
 			    	document.getElementById("form-submitted").style = "color: #1d82ff; display: block;";
 			  	})
 			  	.fail(function() {
-			  	  	document.getElementById("form-submitfail").style = "color: red; display: block;";
+			  	  	document.getElementById("form-submit-fail").style = "color: red; display: block;";
 			  	});
 			}
 	</script>
